--- a/src/Form.css
+++ b/src/Form.css
@@ -21,6 +21,13 @@
     border-radius: 10px;
     font-size: 1.2em;
   }
+
+  input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
   .inputbox:last-child {
     margin-bottom: 0;
   }
